parser.output
State 123 conflicts: 1 shift/reduce


Grammar

    0 $accept: functionDefinition $end

    1 functionDefinition: T_id '(' fpar_list ')' ':' r_type local_definition_list compound_stmt
    2                   | T_id '(' ')' ':' r_type local_definition_list compound_stmt

    3 local_definition_list: %empty
    4                      | local_definition_list local_definition

    5 fpar_list: fpar_def
    6          | fpar_list ',' fpar_def

    7 fpar_def: T_id ':' "reference" typeSpec
    8         | T_id ':' typeSpec

    9 data_type: "int"
   10          | "byte"

   11 typeSpec: data_type
   12         | data_type '[' ']'

   13 r_type: data_type
   14       | "proc"

   15 local_definition: functionDefinition
   16                 | variableDefinition

   17 variableDefinition: T_id ':' data_type ';'
   18                   | T_id ':' data_type '[' T_const ']' ';'

   19 stmt: ';'
   20     | l_value '=' expr ';'
   21     | compound_stmt
   22     | func_call ';'
   23     | "if" '(' cond ')' stmt
   24     | "if" '(' cond ')' stmt "else" stmt
   25     | "while" '(' cond ')' stmt
   26     | "return" ';'
   27     | "return" expr ';'

   28 compound_stmt: '{' compound_stmt_helper '}'

   29 compound_stmt_helper: %empty
   30                     | compound_stmt_helper stmt

   31 func_call: T_id '(' ')'
   32          | T_id '(' expr_list ')'

   33 expr_list: expr
   34          | expr_list ',' expr

   35 expr: T_const
   36     | T_char
   37     | l_value
   38     | '(' expr ')'
   39     | func_call
   40     | '+' expr
   41     | '-' expr
   42     | expr '+' expr
   43     | expr '-' expr
   44     | expr '*' expr
   45     | expr '/' expr
   46     | expr '%' expr

   47 l_value: T_id
   48        | T_id '[' expr ']'
   49        | T_string

   50 cond: "true"
   51     | "false"
   52     | '(' cond ')'
   53     | '!' cond
   54     | expr "==" expr
   55     | expr "!=" expr
   56     | expr '<' expr
   57     | expr '>' expr
   58     | expr "<=" expr
   59     | expr ">=" expr
   60     | cond '&' cond
   61     | cond '|' cond


Terminals, with rules where they appear

    $end (0) 0
    '!' <op> (33) 53
    '%' <op> (37) 46
    '&' <op> (38) 60
    '(' (40) 1 2 23 24 25 31 32 38 52
    ')' (41) 1 2 23 24 25 31 32 38 52
    '*' <op> (42) 44
    '+' <op> (43) 40 42
    ',' (44) 6 34
    '-' <op> (45) 41 43
    '/' <op> (47) 45
    ':' (58) 1 2 7 8 17 18
    ';' (59) 17 18 19 20 22 26 27
    '<' <op> (60) 56
    '=' (61) 20
    '>' <op> (62) 57
    '[' (91) 12 18 48
    ']' (93) 12 18 48
    '{' (123) 28
    '|' <op> (124) 61
    '}' (125) 28
    error (256)
    "byte" (258) 10
    "int" (259) 9
    "if" (260) 23 24
    "else" (261) 24
    "true" (262) 50
    "false" (263) 51
    "proc" (264) 14
    "reference" (265) 7
    "return" (266) 26 27
    "while" (267) 25
    T_id <var> (268) 1 2 7 8 17 18 31 32 47 48
    T_const <num> (269) 18 35
    T_char <character> (270) 36
    T_string <var> (271) 49
    "==" <op> (272) 54
    "!=" <op> (273) 55
    "<=" <op> (274) 58
    ">=" <op> (275) 59


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    functionDefinition <localDef> (42)
        on left: 1 2
        on right: 0 15
    local_definition_list <defList> (43)
        on left: 3 4
        on right: 1 2 4
    fpar_list <fparList> (44)
        on left: 5 6
        on right: 1 6
    fpar_def <singleFpar> (45)
        on left: 7 8
        on right: 5 6
    data_type <rtype> (46)
        on left: 9 10
        on right: 11 12 13 17 18
    typeSpec <rtype> (47)
        on left: 11 12
        on right: 7 8
    r_type <rtype> (48)
        on left: 13 14
        on right: 1 2
    local_definition <localDef> (49)
        on left: 15 16
        on right: 4
    variableDefinition <localDef> (50)
        on left: 17 18
        on right: 16
    stmt <statement> (51)
        on left: 19 20 21 22 23 24 25 26 27
        on right: 23 24 25 30
    compound_stmt <compoundNode> (52)
        on left: 28
        on right: 1 2 21
    compound_stmt_helper <compoundNode> (53)
        on left: 29 30
        on right: 28 30
    func_call <funcInvocation> (54)
        on left: 31 32
        on right: 22 39
    expr_list <expressions> (55)
        on left: 33 34
        on right: 32 34
    expr <expression> (56)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 20 27 33 34 38 40 41 42 43 44 45 46 48 54 55 56 57 58 59
    l_value <lval> (57)
        on left: 47 48 49
        on right: 20 37
    cond <condition> (58)
        on left: 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 23 24 25 52 53 60 61


State 0

    0 $accept: . functionDefinition $end

    T_id  shift, and go to state 1

    functionDefinition  go to state 2


State 1

    1 functionDefinition: T_id . '(' fpar_list ')' ':' r_type local_definition_list compound_stmt
    2                   | T_id . '(' ')' ':' r_type local_definition_list compound_stmt

    '('  shift, and go to state 3


State 2

    0 $accept: functionDefinition . $end

    $end  shift, and go to state 4


State 3

    1 functionDefinition: T_id '(' . fpar_list ')' ':' r_type local_definition_list compound_stmt
    2                   | T_id '(' . ')' ':' r_type local_definition_list compound_stmt

    T_id  shift, and go to state 5
    ')'   shift, and go to state 6

    fpar_list  go to state 7
    fpar_def   go to state 8


State 4

    0 $accept: functionDefinition $end .

    $default  accept


State 5

    7 fpar_def: T_id . ':' "reference" typeSpec
    8         | T_id . ':' typeSpec

    ':'  shift, and go to state 9


State 6

    2 functionDefinition: T_id '(' ')' . ':' r_type local_definition_list compound_stmt

    ':'  shift, and go to state 10


State 7

    1 functionDefinition: T_id '(' fpar_list . ')' ':' r_type local_definition_list compound_stmt
    6 fpar_list: fpar_list . ',' fpar_def

    ')'  shift, and go to state 11
    ','  shift, and go to state 12


State 8

    5 fpar_list: fpar_def .

    $default  reduce using rule 5 (fpar_list)


State 9

    7 fpar_def: T_id ':' . "reference" typeSpec
    8         | T_id ':' . typeSpec

    "byte"       shift, and go to state 13
    "int"        shift, and go to state 14
    "reference"  shift, and go to state 15

    data_type  go to state 16
    typeSpec   go to state 17


State 10

    2 functionDefinition: T_id '(' ')' ':' . r_type local_definition_list compound_stmt

    "byte"  shift, and go to state 13
    "int"   shift, and go to state 14
    "proc"  shift, and go to state 18

    data_type  go to state 19
    r_type     go to state 20


State 11

    1 functionDefinition: T_id '(' fpar_list ')' . ':' r_type local_definition_list compound_stmt

    ':'  shift, and go to state 21


State 12

    6 fpar_list: fpar_list ',' . fpar_def

    T_id  shift, and go to state 5

    fpar_def  go to state 22


State 13

   10 data_type: "byte" .

    $default  reduce using rule 10 (data_type)


State 14

    9 data_type: "int" .

    $default  reduce using rule 9 (data_type)


State 15

    7 fpar_def: T_id ':' "reference" . typeSpec

    "byte"  shift, and go to state 13
    "int"   shift, and go to state 14

    data_type  go to state 16
    typeSpec   go to state 23


State 16

   11 typeSpec: data_type .
   12         | data_type . '[' ']'

    '['  shift, and go to state 24

    $default  reduce using rule 11 (typeSpec)


State 17

    8 fpar_def: T_id ':' typeSpec .

    $default  reduce using rule 8 (fpar_def)


State 18

   14 r_type: "proc" .

    $default  reduce using rule 14 (r_type)


State 19

   13 r_type: data_type .

    $default  reduce using rule 13 (r_type)


State 20

    2 functionDefinition: T_id '(' ')' ':' r_type . local_definition_list compound_stmt

    $default  reduce using rule 3 (local_definition_list)

    local_definition_list  go to state 25


State 21

    1 functionDefinition: T_id '(' fpar_list ')' ':' . r_type local_definition_list compound_stmt

    "byte"  shift, and go to state 13
    "int"   shift, and go to state 14
    "proc"  shift, and go to state 18

    data_type  go to state 19
    r_type     go to state 26


State 22

    6 fpar_list: fpar_list ',' fpar_def .

    $default  reduce using rule 6 (fpar_list)


State 23

    7 fpar_def: T_id ':' "reference" typeSpec .

    $default  reduce using rule 7 (fpar_def)


State 24

   12 typeSpec: data_type '[' . ']'

    ']'  shift, and go to state 27


State 25

    2 functionDefinition: T_id '(' ')' ':' r_type local_definition_list . compound_stmt
    4 local_definition_list: local_definition_list . local_definition

    T_id  shift, and go to state 28
    '{'   shift, and go to state 29

    functionDefinition  go to state 30
    local_definition    go to state 31
    variableDefinition  go to state 32
    compound_stmt       go to state 33


State 26

    1 functionDefinition: T_id '(' fpar_list ')' ':' r_type . local_definition_list compound_stmt

    $default  reduce using rule 3 (local_definition_list)

    local_definition_list  go to state 34


State 27

   12 typeSpec: data_type '[' ']' .

    $default  reduce using rule 12 (typeSpec)


State 28

    1 functionDefinition: T_id . '(' fpar_list ')' ':' r_type local_definition_list compound_stmt
    2                   | T_id . '(' ')' ':' r_type local_definition_list compound_stmt
   17 variableDefinition: T_id . ':' data_type ';'
   18                   | T_id . ':' data_type '[' T_const ']' ';'

    '('  shift, and go to state 3
    ':'  shift, and go to state 35


State 29

   28 compound_stmt: '{' . compound_stmt_helper '}'

    $default  reduce using rule 29 (compound_stmt_helper)

    compound_stmt_helper  go to state 36


State 30

   15 local_definition: functionDefinition .

    $default  reduce using rule 15 (local_definition)


State 31

    4 local_definition_list: local_definition_list local_definition .

    $default  reduce using rule 4 (local_definition_list)


State 32

   16 local_definition: variableDefinition .

    $default  reduce using rule 16 (local_definition)


State 33

    2 functionDefinition: T_id '(' ')' ':' r_type local_definition_list compound_stmt .

    $default  reduce using rule 2 (functionDefinition)


State 34

    1 functionDefinition: T_id '(' fpar_list ')' ':' r_type local_definition_list . compound_stmt
    4 local_definition_list: local_definition_list . local_definition

    T_id  shift, and go to state 28
    '{'   shift, and go to state 29

    functionDefinition  go to state 30
    local_definition    go to state 31
    variableDefinition  go to state 32
    compound_stmt       go to state 37


State 35

   17 variableDefinition: T_id ':' . data_type ';'
   18                   | T_id ':' . data_type '[' T_const ']' ';'

    "byte"  shift, and go to state 13
    "int"   shift, and go to state 14

    data_type  go to state 38


State 36

   28 compound_stmt: '{' compound_stmt_helper . '}'
   30 compound_stmt_helper: compound_stmt_helper . stmt

    "if"      shift, and go to state 39
    "return"  shift, and go to state 40
    "while"   shift, and go to state 41
    T_id      shift, and go to state 42
    T_string  shift, and go to state 43
    ';'       shift, and go to state 44
    '{'       shift, and go to state 29
    '}'       shift, and go to state 45

    stmt           go to state 46
    compound_stmt  go to state 47
    func_call      go to state 48
    l_value        go to state 49


State 37

    1 functionDefinition: T_id '(' fpar_list ')' ':' r_type local_definition_list compound_stmt .

    $default  reduce using rule 1 (functionDefinition)


State 38

   17 variableDefinition: T_id ':' data_type . ';'
   18                   | T_id ':' data_type . '[' T_const ']' ';'

    '['  shift, and go to state 50
    ';'  shift, and go to state 51


State 39

   23 stmt: "if" . '(' cond ')' stmt
   24     | "if" . '(' cond ')' stmt "else" stmt

    '('  shift, and go to state 52


State 40

   26 stmt: "return" . ';'
   27     | "return" . expr ';'

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57
    ';'       shift, and go to state 58

    func_call  go to state 59
    expr       go to state 60
    l_value    go to state 61


State 41

   25 stmt: "while" . '(' cond ')' stmt

    '('  shift, and go to state 62


State 42

   31 func_call: T_id . '(' ')'
   32          | T_id . '(' expr_list ')'
   47 l_value: T_id .
   48        | T_id . '[' expr ']'

    '('  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 47 (l_value)


State 43

   49 l_value: T_string .

    $default  reduce using rule 49 (l_value)


State 44

   19 stmt: ';' .

    $default  reduce using rule 19 (stmt)


State 45

   28 compound_stmt: '{' compound_stmt_helper '}' .

    $default  reduce using rule 28 (compound_stmt)


State 46

   30 compound_stmt_helper: compound_stmt_helper stmt .

    $default  reduce using rule 30 (compound_stmt_helper)


State 47

   21 stmt: compound_stmt .

    $default  reduce using rule 21 (stmt)


State 48

   22 stmt: func_call . ';'

    ';'  shift, and go to state 65


State 49

   20 stmt: l_value . '=' expr ';'

    '='  shift, and go to state 66


State 50

   18 variableDefinition: T_id ':' data_type '[' . T_const ']' ';'

    T_const  shift, and go to state 67


State 51

   17 variableDefinition: T_id ':' data_type ';' .

    $default  reduce using rule 17 (variableDefinition)


State 52

   23 stmt: "if" '(' . cond ')' stmt
   24     | "if" '(' . cond ')' stmt "else" stmt

    "true"    shift, and go to state 68
    "false"   shift, and go to state 69
    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '!'       shift, and go to state 70
    '('       shift, and go to state 71

    func_call  go to state 59
    expr       go to state 72
    l_value    go to state 61
    cond       go to state 73


State 53

   35 expr: T_const .

    $default  reduce using rule 35 (expr)


State 54

   36 expr: T_char .

    $default  reduce using rule 36 (expr)


State 55

   40 expr: '+' . expr

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 74
    l_value    go to state 61


State 56

   41 expr: '-' . expr

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 75
    l_value    go to state 61


State 57

   38 expr: '(' . expr ')'

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 76
    l_value    go to state 61


State 58

   26 stmt: "return" ';' .

    $default  reduce using rule 26 (stmt)


State 59

   39 expr: func_call .

    $default  reduce using rule 39 (expr)


State 60

   27 stmt: "return" expr . ';'
   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '%'  shift, and go to state 81
    ';'  shift, and go to state 82


State 61

   37 expr: l_value .

    $default  reduce using rule 37 (expr)


State 62

   25 stmt: "while" '(' . cond ')' stmt

    "true"    shift, and go to state 68
    "false"   shift, and go to state 69
    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '!'       shift, and go to state 70
    '('       shift, and go to state 71

    func_call  go to state 59
    expr       go to state 72
    l_value    go to state 61
    cond       go to state 83


State 63

   31 func_call: T_id '(' . ')'
   32          | T_id '(' . expr_list ')'

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57
    ')'       shift, and go to state 84

    func_call  go to state 59
    expr_list  go to state 85
    expr       go to state 86
    l_value    go to state 61


State 64

   48 l_value: T_id '[' . expr ']'

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 87
    l_value    go to state 61


State 65

   22 stmt: func_call ';' .

    $default  reduce using rule 22 (stmt)


State 66

   20 stmt: l_value '=' . expr ';'

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 88
    l_value    go to state 61


State 67

   18 variableDefinition: T_id ':' data_type '[' T_const . ']' ';'

    ']'  shift, and go to state 89


State 68

   50 cond: "true" .

    $default  reduce using rule 50 (cond)


State 69

   51 cond: "false" .

    $default  reduce using rule 51 (cond)


State 70

   53 cond: '!' . cond

    "true"    shift, and go to state 68
    "false"   shift, and go to state 69
    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '!'       shift, and go to state 70
    '('       shift, and go to state 71

    func_call  go to state 59
    expr       go to state 72
    l_value    go to state 61
    cond       go to state 90


State 71

   38 expr: '(' . expr ')'
   52 cond: '(' . cond ')'

    "true"    shift, and go to state 68
    "false"   shift, and go to state 69
    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '!'       shift, and go to state 70
    '('       shift, and go to state 71

    func_call  go to state 59
    expr       go to state 91
    l_value    go to state 61
    cond       go to state 92


State 72

   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr
   54 cond: expr . "==" expr
   55     | expr . "!=" expr
   56     | expr . '<' expr
   57     | expr . '>' expr
   58     | expr . "<=" expr
   59     | expr . ">=" expr

    "=="  shift, and go to state 93
    "!="  shift, and go to state 94
    "<="  shift, and go to state 95
    ">="  shift, and go to state 96
    '>'   shift, and go to state 97
    '<'   shift, and go to state 98
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '%'   shift, and go to state 81


State 73

   23 stmt: "if" '(' cond . ')' stmt
   24     | "if" '(' cond . ')' stmt "else" stmt
   60 cond: cond . '&' cond
   61     | cond . '|' cond

    '|'  shift, and go to state 99
    '&'  shift, and go to state 100
    ')'  shift, and go to state 101


State 74

   40 expr: '+' expr .
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '%'  shift, and go to state 81

    $default  reduce using rule 40 (expr)


State 75

   41 expr: '-' expr .
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '%'  shift, and go to state 81

    $default  reduce using rule 41 (expr)


State 76

   38 expr: '(' expr . ')'
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '%'  shift, and go to state 81
    ')'  shift, and go to state 102


State 77

   42 expr: expr '+' . expr

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 103
    l_value    go to state 61


State 78

   43 expr: expr '-' . expr

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 104
    l_value    go to state 61


State 79

   44 expr: expr '*' . expr

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 105
    l_value    go to state 61


State 80

   45 expr: expr '/' . expr

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 106
    l_value    go to state 61


State 81

   46 expr: expr '%' . expr

    T_id      shift, and go to state 42
    T_const   shift, and go to state 53
    T_char    shift, and go to state 54
    T_string  shift, and go to state 43
    '+'       shift, and go to state 55
    '-'       shift, and go to state 56
    '('       shift, and go to state 57

    func_call  go to state 59
    expr       go to state 107
    l_value    go to state 61


State 82

   27 stmt: "return" expr ';' .

    $default  reduce using rule 27 (stmt)


State 83

   25 stmt: "while" '(' cond . ')' stmt
   60 cond: cond . '&' cond
   61     | cond . '|' cond

    '|'  shift, and go to state 99
    '&'  shift, and go to state 100
    ')'  shift, and go to state 108


State 84

   31 func_call: T_id '(' ')' .

    $default  reduce using rule 31 (func_call)


State 85

   32 func_call: T_id '(' expr_list . ')'
   34 expr_list: expr_list . ',' expr

    ')'  shift, and go to state 109
    ','  shift, and go to state 110


State 86
